# csharp-language-server

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  download-server  flake.nix  server-version.txt  upgrade-server
.github/workflows/: build.yml  ci.yml  release.yml  upgrade-server.yml
download-server-project/: NuGet.config  ServerDownload.csproj  version.txt
src/: download_roslyn.rs  download_server.rs  lib.rs  main.rs  notification.rs  path.rs  pipe_stream.rs  roslyn.rs  server.rs  server_version.rs
tests/: integration_tests.rs
