[package]
name = "roslyn-language-server"
version = "0.5.0"
edition = "2021"
authors = ["Sofus Addington"]
description = "A tool that simplifies installation and running C# language server"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5", features = ["derive"] }
directories = "6.0.0"
fs_extra = "1.3.0"
futures = "0.3.31"
rust_search = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42.0", features = ["full"] }
zip = "2.2.2"

[dev-dependencies]
assert_cmd = "2.0"
